chore: reading single data values into immutable records