@@ -61,7 +61,8 @@ import org.hisp.dhis.dataset.Section;
 import org.hisp.dhis.dataset.comparator.SectionOrderComparator;
 import org.hisp.dhis.datasetreport.DataSetReportService;
 import org.hisp.dhis.datasetreport.DataSetReportStore;
-import org.hisp.dhis.datavalue.DataValue;
+import org.hisp.dhis.datavalue.DataEntryKey;
+import org.hisp.dhis.datavalue.DataValueEntry;
 import org.hisp.dhis.datavalue.DataValueService;
 import org.hisp.dhis.i18n.I18n;
 import org.hisp.dhis.i18n.I18nFormat;
@@ -326,13 +327,16 @@ public class DefaultDataSetReportService implements DataSetReportService {
       CategoryOptionCombo optionCombo) {
     List<Double> values =
         periods.stream()
-            .map(p -> dataValueService.getDataValue(dataElement, p, unit, optionCombo))
+            .map(
+                p ->
+                    dataValueService.getDataValue(
+                        new DataEntryKey(dataElement, p, unit, optionCombo, null)))
             .filter(Objects::nonNull)
-            .map(DataValue::getValue)
+            .map(DataValueEntry::value)
             .filter(Objects::nonNull)
             .map(MathUtils::parseDouble)
             .filter(Objects::nonNull)
-            .collect(Collectors.toList());
+            .toList();
 
     return (values.isEmpty()) ? null : values.stream().mapToDouble(Double::doubleValue).sum();
   }
